NLP TP's/texts/robotics/robotics.stackexchange_0000028587.txt
Q:

Invalid use of template name 'ignition::math::v5::Box'

I am on Ubuntu 16.04, Kernel 4.17
I have successfully build from source ign-cmake, ign-common1, ign-fuel-tools1, ign-math4, ign-msgs, ign-msgs, ign-transport, sdformat6.
Whilst making gazebo from this page Gazebo::Install from Source, I ran into the following errors.
In file included from /home/ryan/Documents/source/gazebo/gazebo/rendering/ApplyWrenchVisual.cc:24:0:
/home/ryan/Documents/source/gazebo/gazebo/rendering/MovableText.hh:217:15: error: invalid use of template-name ‘ignition::math::v5::Box’ without an argument list
   public: ignition::math::Box AABB();
           ^
In file included from /home/ryan/Documents/source/gazebo/gazebo/rendering/Scene.hh:39:0,
             from /home/ryan/Documents/source/gazebo/gazebo/rendering/ApplyWrenchVisual.cc:26:
/home/ryan/Documents/source/gazebo/gazebo/rendering/Visual.hh:478:15: error: invalid use of template-name ‘ignition::math::v5::Box’ without an argument list
   public: ignition::math::Box BoundingBox() const;
           ^
/home/ryan/Documents/source/gazebo/gazebo/rendering/Visual.hh:776:50: error: ‘ignition::math::Box’ is not a type
                              ignition::math::Box &_box) const;
                                              ^
/home/ryan/Documents/source/gazebo/gazebo/rendering/ApplyWrenchVisual.cc: In member function ‘void gazebo::rendering::ApplyWrenchVisual::UpdateTorqueVisual()’:
/home/ryan/Documents/source/gazebo/gazebo/rendering/ApplyWrenchVisual.cc:368:39: error: ‘class gazebo::rendering::Visual’ has no member named ‘BoundingBox’
double linkDiagonal = dPtr->parent->BoundingBox().Size().Length();
                                   ^
/home/ryan/Documents/source/gazebo/gazebo/rendering/ApplyWrenchVisual.cc: In member function ‘void gazebo::rendering::ApplyWrenchVisual::Resize()’:
/home/ryan/Documents/source/gazebo/gazebo/rendering/ApplyWrenchVisual.cc:396:49: error: ‘class gazebo::rendering::Visual’ has no member named ‘BoundingBox’
double linkSize = std::max(0.1, dPtr->parent->BoundingBox().Size().Length());
                                             ^
gazebo/rendering/CMakeFiles/gazebo_rendering.dir/build.make:62: recipe for target 'gazebo/rendering/CMakeFiles/gazebo_rendering.dir/ApplyWrenchVisual.cc.o' failed
make[2]: *** [gazebo/rendering/CMakeFiles/gazebo_rendering.dir/ApplyWrenchVisual.cc.o] Error 1
CMakeFiles/Makefile2:2599: recipe for target 'gazebo/rendering/CMakeFiles/gazebo_rendering.dir/all' failed
make[1]: *** [gazebo/rendering/CMakeFiles/gazebo_rendering.dir/all] Error 2
Makefile:162: recipe for target 'all' failed

Have tried changing ignition::math::Box to ignition::math::v5::Box, but it didnt help
Thanks for assisting.

Originally posted by eraserpencil on Gazebo Answers with karma: 3 on 2018-08-27
Post score: 0

A:

It looks like you're using ign-math5 (hence v5) instead of ign-math4. I suggest you uninstall all ign-math from your system and reinstall making sure it's version 4.

Originally posted by chapulina with karma: 7504 on 2018-08-27
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by eraserpencil on 2018-08-28:
I manage to compile it, but I havent been able to launch it. I have it in /usr/local/bin/gazebo9, but I seem to be missing smtg cause it dosent launch. Was expecting a gui.
Am I doing something wrong?
Comment by chapulina on 2018-08-28:
Can you add the output of gazebo --verbose to your question?
Comment by eraserpencil on 2018-08-28:
Gazebo multi-robot simulator, version 9.3.1
Copyright (C) 2012 Open Source Robotics Foundation.
Released under the Apache 2 License.
http://gazebosim.org
[Msg] Waiting for master.
[Msg] Connected to gazebo master @ http://127.0.0.1:11345
[Msg] Publicized address: 10.20.11.180
Comment by chapulina on 2018-08-29:
And then what happens? No GUI shows up?
Comment by eraserpencil on 2018-08-30:
yup! any ideas?
Comment by chapulina on 2018-08-30:
If you start gzserver --verbose and gzclient --verbose separately, do you see any errors?
Comment by eraserpencil on 2018-08-31:
gzclient --verbose has a segfault.
Comment by chapulina on 2018-08-31:
Can you run gdb gzclient and add the backtrace to your original question above?
Comment by eraserpencil on 2018-09-01:
I feel a new question would be more fitting. Will close this

